# projeto-letras-de-musica

./: LICENSE  README.md  app.py  pyproject.toml  teste.ipynb
