[project]
name = "hashtag"
version = "0.1.0"
description = ""
authors = [
    {name = "Karla Renata",email = "karlarenata692@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "streamlit (>=1.44.1,<2.0.0)",
    "stra (>=0.0.1,<0.0.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
